src/test/ui/associated-types/associated-types-project-from-hrtb-in-fn-body.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/associated-types-project-from-hrtb-in-fn-body.rs:32:19
   |
LL | fn bar<'a, 'b, I : for<'x> Foo<&'x isize>>(
   |        --  -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
...
LL |     let z: I::A = if cond { x } else { y };
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'b`

error: unsatisfied lifetime constraints
  --> $DIR/associated-types-project-from-hrtb-in-fn-body.rs:32:19
   |
LL | fn bar<'a, 'b, I : for<'x> Foo<&'x isize>>(
   |        --  -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
...
LL |     let z: I::A = if cond { x } else { y };
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'b` must outlive `'a`

error: aborting due to 2 previous errors

